[gd_scene load_steps=9 format=3 uid="uid://do1p7gbc7n7fj"]

[ext_resource type="Script" path="res://Scripts/NewEmailLine.gd" id="1_ardfu"]
[ext_resource type="FontFile" uid="uid://c1nqc26intugq" path="res://Fonts/ConsolaMono-Bold.ttf" id="2_feg7p"]
[ext_resource type="Texture2D" uid="uid://wfo7pfqhn7qh" path="res://Images/trashcanOpen.png" id="3_26ucl"]
[ext_resource type="Texture2D" uid="uid://ch147g7e5krli" path="res://Images/warning.png" id="4_d3rc0"]
[ext_resource type="Texture2D" uid="uid://2y3iiq1i8k8b" path="res://Images/information.png" id="5_fivpp"]
[ext_resource type="Texture2D" uid="uid://b3v4745h3u4at" path="res://Images/import.png" id="6_cvntq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsgso"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2ppy"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[node name="EmailLine" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ardfu")

[node name="EmailLineButton" type="Button" parent="."]
layout_mode = 0
offset_right = 1584.0
offset_bottom = 48.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_bsgso")
theme_override_styles/hover = SubResource("StyleBoxFlat_bsgso")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bsgso")

[node name="EmailLineText" type="Label" parent="EmailLineButton"]
layout_mode = 0
offset_left = 8.0
offset_right = 1321.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_feg7p")
theme_override_font_sizes/font_size = 31
text = "BOSS | URGENT | Subject"
vertical_alignment = 1

[node name="ButtonsPanel" type="Panel" parent="EmailLineButton"]
layout_mode = 0
offset_left = 1328.0
offset_right = 1584.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_g2ppy")

[node name="Delete" type="TextureButton" parent="EmailLineButton/ButtonsPanel"]
layout_mode = 0
offset_left = 192.0
offset_right = 325.0
offset_bottom = 100.0
scale = Vector2(0.48164, 0.48164)
tooltip_text = "Delete"
texture_normal = ExtResource("3_26ucl")
stretch_mode = 3

[node name="Scan" type="TextureButton" parent="EmailLineButton/ButtonsPanel"]
layout_mode = 0
offset_right = 133.0
offset_bottom = 100.0
scale = Vector2(0.483627, 0.483627)
tooltip_text = "Scan"
texture_normal = ExtResource("4_d3rc0")
stretch_mode = 3

[node name="Info" type="TextureButton" parent="EmailLineButton/ButtonsPanel"]
layout_mode = 0
offset_left = 64.0
offset_right = 197.0
offset_bottom = 100.0
scale = Vector2(0.481971, 0.481971)
tooltip_text = "Information"
texture_normal = ExtResource("5_fivpp")
stretch_mode = 3

[node name="MarkAsRead" type="TextureButton" parent="EmailLineButton/ButtonsPanel"]
layout_mode = 0
offset_left = 128.0
offset_right = 261.0
offset_bottom = 100.0
scale = Vector2(0.481196, 0.481196)
tooltip_text = "Mark as Read"
texture_normal = ExtResource("6_cvntq")
stretch_mode = 3
